--- a/pod-config.yaml
+++ b/pod-config.yaml
@@ -6,7 +6,7 @@ spec:
    containers:
    - name: nginx
      image: nginx
-     env:
+     envFrom:
      - configMapRef:
        name: devopswithaws
     #  env:
