--- a/multi-container.yaml
+++ b/multi-container.yaml
@@ -3,9 +3,9 @@ apiVersion: v1
 metadata:
   name: multi-container
 spec:
- containers:
- - name: nginx
-   image: nginx
- - name: alma
-   image: almalinux:9
-   command: [ "sleep","2000" ]
+  containers:
+  - name: nginx
+    image: nginx
+  - name: alma
+    image: "almalinux:9"
+    command: ["sleep","2000"]
