--- a/storage/efs-static.yaml
+++ b/storage/efs-static.yaml
@@ -36,7 +36,7 @@ metadata:
 spec:
   containers:
   - name: app
-    image: rockylinux:8
+    image: nginx
     command: ["/bin/sh"]
     args: ["-c", "while true; do echo $(date -u) >> /data/out.txt; sleep 5; done"]
     volumeMounts:
