--- a/storage/efs-dynamic.yaml
+++ b/storage/efs-dynamic.yaml
@@ -14,6 +14,8 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: efs-dynamic
+  labels:
+    purpose: efs-dynamic
 spec:
   containers:
     - name: nginx
@@ -25,7 +27,6 @@ spec:
     - name: persistent-storage
       persistentVolumeClaim:
         claimName: efs-dynamic
----
 ---
 apiVersion: v1
 kind: Service
