--- a/deployment.yaml
+++ b/deployment.yaml
@@ -25,3 +25,18 @@ spec:
        containers:
        - name: nginx
          image: nginx:stable-perl
+---
+apiVersion: v1 
+kind: Service 
+metadata:
+  name: nginx
+spec:
+  selector:
+    app: nginx
+    tier: web
+    project: test-project
+    extra-key: extra-value
+  ports:
+  - protocol: TCP
+    port: 80
+    targetPort: 80
