--- a/selectors/04-pod-affinity.yaml
+++ b/selectors/04-pod-affinity.yaml
@@ -28,7 +28,7 @@ spec:
             operator: In
             values:
             - pod-1
-        topologyKey: topology.kubernetes.io/zone
+        topologyKey: topology.kubernetes.io/hostname
   containers:
   - name: nginx
     image: nginx
